[gd_scene load_steps=4 format=3 uid="uid://dues7c2js6d68"]

[ext_resource type="Script" path="res://example_root_scene.gd" id="1_0m63u"]
[ext_resource type="PackedScene" uid="uid://bit2t82mmllyc" path="res://example_player_scene.tscn" id="1_b6n0f"]
[ext_resource type="PackedScene" uid="uid://defq0xnr3tmi6" path="res://arabfunny_controller.tscn" id="2_520pw"]

[node name="example_rootScene" type="Node2D"]
process_mode = 3
script = ExtResource("1_0m63u")

[node name="arabfunny_controller" parent="." instance=ExtResource("2_520pw")]

[node name="example_playerScene" parent="." instance=ExtResource("1_b6n0f")]
visible = false

[node name="deleteThis_Camera2D" type="Camera2D" parent="."]

[node name="deleteThis_cameraZoom_delay" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="deleteThis_cameraBack_delay" type="Timer" parent="."]
wait_time = 75.0
one_shot = true
autostart = true

[connection signal="timeout" from="deleteThis_cameraZoom_delay" to="." method="_on_delete_this_camera_zoom_delay_timeout"]
[connection signal="timeout" from="deleteThis_cameraBack_delay" to="." method="_on_delete_this_camera_back_delay_timeout"]
